--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ repository = "https://github.com/mikkelbue/tinyda"
 documentation = "https://tinyda.readthedocs.io"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
 packages = [{include = "tinyDA"}]
@@ -24,12 +23,12 @@ packages = [{include = "tinyDA"}]
 "Bug Tracker" = "https://github.com/mikkelbue/tinyDA/issues"
 
 [tool.poetry.dependencies]
-arviz = "^0.18.0"
+arviz = "^0.22.0"
 matplotlib = "^3.8.0"
-numpy = "^1.26.0"
-python = ">=3.10,<4.0.0"
+numpy = "^2.3.4"
+python = ">=3.11,<4.0.0"
 tqdm = "^4.66.0"
-scipy = "^1.12.0"
+scipy = "^1.16.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
@@ -37,7 +36,7 @@ black = "^23.12.1"
 pytest = "^7.4.4"
 nbmake = "^1.4.6"
 umbridge = "^1.2.4"
-ray = "^2.9.0"
+ray = "<2.51.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
